--- a/scss/app.scss
+++ b/scss/app.scss
@@ -38,3 +38,7 @@
 //   "foundation/components/type",
 //   "foundation/components/offcanvas",
 //   "foundation/components/visibility";
+
+.toppagepadding {
+  margin-top: 2em;
+}
